# scanner-watcher2

./: .gitignore  .yamllint  BUILD.md  CONFIGURATION_WIZARD.md  DEVELOPER_GUIDE.md  FILENAME_STRUCTURE.md  INSTALLER.md  INSTALLER_TEST_CHECKLIST.md  LICENSE.txt  QUICK_BUILD_GUIDE.md  README.md  README.txt  SCANNER_WATCHER2_ARCHITECTURE.md  TASK_15_SUMMARY.md  TASK_16_SUMMARY.md  TASK_DOCUMENT_TYPE_ENUM.md  TESTING_CHECKLIST.md  TROUBLESHOOTING.md  WINDOWS_REQUIREMENTS.md  WORKFLOW_VALIDATION.md  build.bat  build_installer.bat  config_template.json  pyproject.toml  scanner_watcher2.iss  scanner_watcher2.spec  validate_workflows.py
.github/workflows/: README.md  VALIDATION_SUMMARY.md  ci.yml  release.yml
.kiro/specs/github-actions-ci/: design.md  requirements.md  tasks.md
.kiro/specs/scanner-watcher2/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
src/scanner_watcher2/: __init__.py  __main__.py  config.py  config_wizard.py  models.py
src/scanner_watcher2/core/: __init__.py  ai_service.py  directory_watcher.py  file_manager.py  file_processor.py  pdf_processor.py
src/scanner_watcher2/infrastructure/: __init__.py  config_manager.py  error_handler.py  logger.py
src/scanner_watcher2/service/: __init__.py  orchestrator.py  windows_service.py
tests/: __init__.py  conftest.py
tests/fixtures/configs/: .gitkeep
tests/fixtures/mock_responses/: .gitkeep
tests/fixtures/pdfs/: .gitkeep
tests/integration/: __init__.py  test_multi_page_extraction.py
tests/property/: __init__.py  test_ai_service_properties.py  test_config_properties.py  test_directory_watcher_properties.py  test_error_handler_properties.py  test_file_manager_properties.py  test_file_processor_properties.py  test_logger_properties.py  test_orchestrator_properties.py  test_pdf_processor_properties.py  test_windows_service_properties.py
tests/unit/: __init__.py  test_ai_service.py  test_config.py  test_config_manager.py  test_config_wizard.py  test_filename_ordering.py  test_main.py  test_models.py
windows/: README.md
